Image stretching fix on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -68,6 +68,12 @@ h6 {
   color: var(--premium);
 }
 
+.text-ellipsis {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 .floating {
   animation-name: floating;
   animation-duration: 5s;
@@ -367,12 +373,6 @@ footer {
   max-width: 350px;
 }
 
-.premium-card .perk-text {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 .premium-perk-card {
   margin: 0.5rem;
   min-width: 350px;
@@ -387,10 +387,14 @@ footer {
   padding: 1rem;
 }
 
-.premium-card img.card-img-top {
-  width: 100%;
-  padding: 1.5rem 35% 0.5rem;
+.premium-card img {
   display: block;
+  max-width: 100px;
+  width: auto;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1.25em;
 }
 
 .premium-card .card-text {
